fix spacing on smaller screens

--- a/src/components/Resume/Entry/Entry.module.css
+++ b/src/components/Resume/Entry/Entry.module.css
@@ -69,7 +69,7 @@
   /* @apply -mr-[22px]; */
 }
 .details {
-  @apply self-center mt-2 ml-2;
+  @apply self-center mt-2 ml-2  w-72 lg:w-full;
 }
 
 .details__heading {
@@ -81,5 +81,5 @@
 }
 
 .details__desription {
-  @apply font-light leading-5 text-black mt-2 w-96;
+  @apply font-light leading-5 text-black mt-2  w-72 lg:w-96;
 }
